--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Air BnB Clone</title>
-    <link rel="stylesheet" href="./styles/2-common.css" />
-    <link rel="stylesheet" href="./styles/2-header.css" />
-    <link rel="stylesheet" href="./styles/2-footer.css" />
+    <meta charset="utf-8">
+    <title>AirBnb Clone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
   </head>
   <body>
-    <header></header>
-    <footer>Best School</footer>
+    <header>
+    </header>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
   </body>
 </html>
