--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="./styles/3-common.css" />
-    <link rel="stylesheet" href="./styles/3-header.css" />
-    <link rel="stylesheet" href="./styles/3-footer.css" />
+    <meta charset="utf-8">
+    <title>AirBnb Clone</title>
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+      </div>
     </header>
-    <footer>Best School</footer>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
   </body>
 </html>
