--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="./styles/4-common.css" />
-    <link rel="stylesheet" href="./styles/3-header.css" />
-    <link rel="stylesheet" href="./styles/3-footer.css" />
-    <link rel="stylesheet" href="./styles/5-filters.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
-        <button type="button">Search</button>
         <div class="locations">
           <h3>States</h3>
-          <h4>California, Arizona....</h4>
+          <h4>California, New York...</h4>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-          <h4>Internet, Kitchen....</h4>
+          <h4>Laundry, Internet...</h4>
         </div>
+        <button>
+          Search
+        </button>
       </section>
     </div>
-    <footer>Best School</footer>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
   </body>
 </html>
