--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,71 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AirBnB Clone</title>
-    <link rel="icon" href="./styles/4-common.css" />
-    <link rel="stylesheet" href="./styles/3-header.css" />
-    <link rel="stylesheet" href="./styles/3-footer.css" />
-    <link rel="stylesheet" href="./styles/6-filters.css" />
-    <link rel="stylesheet" href="./styles/7-places.css" />
-    <link rel="icon" href="./images/icon.png" type="image/png" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
+    <link rel="icon" href="images/icon.png" type="image/png">
+    <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
-        <button type="button">Search</button>
         <div class="locations">
           <h3>States</h3>
-          <h4>California, Arizona....</h4>
+          <h4>California, New York...</h4>
           <ul class="popover">
-            <li><h2>Arizona:</h2></li>
             <li>
-              <ul class="popover_list">
-                <li>Page</li>
-                <li>Page2</li>
+              <h2>California:</h2>
+              <ul>
+                <li>San Francisco</li>
+                <li>Mountain View</li>
               </ul>
             </li>
-            <li><h2>California:</h2></li>
             <li>
-              <ul class="popover_list">
-                <li>San Francisco</li>
-                <li>Los Altos</li>
+              <h2>New York:</h2>
+              <ul>
+                <li>Manhattan</li>
+                <li>Brooklyn</li>
               </ul>
             </li>
           </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
-          <h4>Internet, Kitchen....</h4>
+          <h4>Laundry, Internet...</h4>
           <ul class="popover">
+            <li>Laundry</li>
             <li>Internet</li>
-            <li>TV</li>
-            <li>Kitchen</li>
-            <li>Iron</li>
+            <li>Television</li>
+            <li>Pool</li>
           </ul>
         </div>
+        <button>
+          Search
+        </button>
       </section>
       <section class="places">
-        <div class="places_title">
-          <h1>Places</h1>
-        </div>
-        <div class="articles">
-          <article>
-            <h2>My Home</h2>
-          </article>
-          <article>
-            <h2>Tiny House</h2>
-          </article>
-          <article>
-            <h2>A suite</h2>
-          </article>
-        </div>
+        <h1>Places</h1>
+        <article>
+          <h2>My home</h2>
+        </article>
+        <article>
+          <h2>Tiny house</h2>
+        </article>
+        <article>
+          <h2>A suite</h2>
+        </article>
       </section>
     </div>
-    <footer>Best School</footer>
+    <footer>
+      <p>
+        Holberton School
+      </p>
+    </footer>
   </body>
 </html>
